	  scanner's lamp on exit (bug #300963).
	* backend/gt68xx.c backend/gt68xx_high.h: Used new lamp option
	  from saneopts.h (bug #300963).
	* backend/net.c doc/descriptions/net.desc: Check for (size_t) -1
	  doesn't work on 64 bit platforms as size_t is 64 bits there
	  while the length of a data block is defined as 32 bits in the
	  SANE network standard (bug #300837).
	* backend/microtek2.c: Fixed some warnings (bug #300823).

2004-10-02  Thomas Soumarmon <thomas.soumarmon@cogitae.net>

	* backend/hp5400_internal.c backend/hp5400_internal.h
	  backend/hp5400_sanei.c backend/hp5400_sanei.h
	  backend/hp5400_sane.c: 
	  removing some compilation warnings

2004-10-02  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
	
	* backend/hp5400_internal.c: hp5400 version mathing test
          has been removed by default.
          To enable it :
          CFLAGS="-DSTRING_VERSION_MATCH" ./configure

2004-10-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added several
	  scanners. Removed Genius Vivid 1200 XE (actually supported by
	  gt68xx backend).
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Updates of supported scanners.

2004-10-01  Oliver Rauch <Oliver.Rauch@Rauch-DOmain.DE>

	* backend/umax-scanner.c, umax.conf and umax.desc:
	  added "LinoHell", "OPAL2 " as supported device

2004-09-28  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* po/sane-backends.sv.po: Updated Swedish translation file

2004-09-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc doc/descriptions/snapscan.desc:
	  Changed entry for Epson 2580 (should work with SnapScan backend).

2004-09-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/unsupported.desc: fixed Plustek entries.

2004-09-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Compeye Simplex 1236C.
