@@ -16,7 +16,10 @@
 	  doesn't work on 64 bit platforms as size_t is 64 bits there
 	  while the length of a data block is defined as 32 bits in the
 	  SANE network standard (bug #300837).
-	* backend/microtek2.c: Fixed some warnings (bug #300823).
+	* backend/microtek2.c backend/microtek2.h: Fixed some warnings
+	  (bug #300823). Fixed Microtek Phantom C6 scanning on big endian
+	  platforms. Based on patch from Matijs van Zuijlen in Debian bug
+	  tracking system (#274523).
 
 2004-10-02  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
 
